--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,7 @@ div {
 .top {
   flex: 1 0 50px;
   background: lightgray;
+  padding: 20px 5px 0px 5px;
 }
 
 .canvasContainer {
@@ -65,6 +66,7 @@ div {
 }
 
 .optionsPanel {
+  padding-left: 30px;
   flex: 1;
   background: lightgreen;
   width: 400px;
