--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 * {
+  --bg: lightgray;
   user-select: none;
   box-sizing: border-box;
 }
@@ -59,7 +60,7 @@ div {
 
 .top {
   flex: 1 0 50px;
-  background: lightgray;
+  background: var(--bg);
   padding: 20px 5px 0px 5px;
 }
 
@@ -76,7 +77,7 @@ div {
 .optionsPanel {
   padding-left: 30px;
   flex: 1;
-  background: lightgreen;
+  background: var(--bg);
   width: 400px;
 }
 
@@ -101,7 +102,7 @@ th {
 
 .index {
   min-width: 200px;
-  background: #123456;
+  background: var(--bg);
   font-weight: bold;
   padding: 0px;
   margin: 0px;
@@ -111,7 +112,7 @@ th {
   padding: 5px 0px 0px 10px;
   height: 50px;
   vertical-align: middle;
-  border: 1px solid #123456;
+  background: var(--bg);
 }
 
 .index > div:hover {
